log
Mon Apr 25 01:57:07 UTC 2022: 
 treemap.c | 103 +++++++++++++++++++++++++++++++++++++++++++++++++++++---------
 1 file changed, 89 insertions(+), 14 deletions(-)
In file included from test.c:4:0:
treemap.c: In function ‘removeNode’:
treemap.c:108:5: error: expected identifier before ‘}’ token
     }
     ^
Compilation failed
1f9fc04
Mon Apr 25 01:57:47 UTC 2022: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  14|5
total_score: 15/70
3a6f521
Mon Apr 25 02:01:16 UTC 2022: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  15|4
total_score: 25/70
d442b82
Mon Apr 25 02:05:56 UTC 2022: 
 treemap.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  17|3
total_score: 30/70
58d2754
Mon Apr 25 02:46:51 UTC 2022: 
 treemap.c | 37 +++++++++++++++++++++++++++++++++++++
 1 file changed, 37 insertions(+)
 tests:  17|3
total_score: 30/70
cb6d271
Mon Apr 25 03:10:30 UTC 2022: 
 treemap.c | 21 +++++++++++++++++++++
 1 file changed, 21 insertions(+)
In file included from test.c:4:0:
treemap.c: In function ‘upperBound’:
treemap.c:156:14: error: unused variable ‘aux’ [-Werror=unused-variable]
   TreeNode * aux = tree->root;
              ^~~
cc1: all warnings being treated as errors
Compilation failed
b99f9a5
Mon Apr 25 03:10:41 UTC 2022: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  21|2
total_score: 40/70
2956f61
Mon Apr 25 03:16:14 UTC 2022: 
 treemap.c | 11 +++++++----
 1 file changed, 7 insertions(+), 4 deletions(-)
 tests:  21|2
total_score: 40/70
5bfe6c0
Mon Apr 25 03:22:17 UTC 2022: 
 treemap.c | 12 ++++++++----
 1 file changed, 8 insertions(+), 4 deletions(-)
 tests:  22|2
total_score: 45/70
9c654de
